--- a/main/messaging_struct.css
+++ b/main/messaging_struct.css
@@ -1,14 +1,31 @@
-body{
-    
-}
 
 .body{
+    display:flex;
+    width: 100%; 
     border:1px solid black;
-    position:fixed;
-    bottom: -3%;
-    display: flex;
-    height:10em;
-    width:100%;
-    background-color: khaki;
+    height: 45em;  
+}
 
+.col{
+    border: 1px solid black;
+}
+
+
+.edit-seg{
+    position:absolute;
+    bottom: 4%;
+    width: 40%;
+    /* border: 1px solid black; */
+}
+
+.edit-field{
+    border: 1px solid black;
+    width: 80%;
+}
+.edit-bar{
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    /* border: 1px solid black; */
+    width:70%;
 }
