--- a/main/Messaging/messaging_struct.css
+++ b/main/Messaging/messaging_struct.css
@@ -2,12 +2,13 @@
 .body{
     display:flex;
     width: 100%; 
-    border:1px solid black;
-    height: 45em;  
+    /* border:1px solid black; */
+    /* height: 45em;   */
 }
 
 .col{
     border: 1px solid black;
+    padding: 0;
 }
 
 
@@ -29,3 +30,4 @@
     /* border: 1px solid black; */
     width:70%;
 }
+  
