--- a/UI/main/Messaging/mess-navigation.css
+++ b/UI/main/Messaging/mess-navigation.css
@@ -3,26 +3,26 @@
     display: flex;
     flex-flow: column;
     justify-content: flex-start;
-    border-right: 1px solid rgb(68, 63, 63);
+    /* border-right: 1px solid rgb(68, 63, 63); */
+    background-color: rgb(224, 222, 222);
 }
 
 .profile{
     display:flex;
     flex-flow: row;
     /* border:1px solid black; */
+    padding-top: 0.2em;
     width:100%;
-    height:5em;
-    background-color: rgb(41, 134, 122);
+    height:3.2em;
+    background-color: rgb(30, 82, 194);
   
 }
 
 .profile-image{
-    background-color: rgb(135, 180, 222);
-    width: 4em;
-    height: 4em;
-    margin: 0.5vh;
-    /* border:1px solid black; */
-    /* border-radius: 2.5em; */
+    background-color: rgb(255, 255, 255);
+    width: 2.5em;
+    height: 2.5em;
+    margin-left: 0.2em;
 }
 
 .profile-image:hover{
@@ -30,25 +30,27 @@
 }
 
 .title-text{
-    color: rgb(223, 213, 213);
+    color: rgb(29, 28, 28);
     margin-left: 0.5em;
-    padding:0.5vh;
+    margin-top: 0.4em;
+    font-size: medium;
+    /* margin-bottom: auto; */
     cursor: pointer;
+    /* border: 1px solid black; */
 }
 
-.title-text:hover{
-    color:rgb(56, 54, 54);
-}
+
 
 .more{
     /* border: 1px solid black; */
-    padding-top: 0.3em;
+    padding-top: 0.1em;
     margin-left: auto;
 }
 
 .more::after{
     content:'\2807';
-    font-size: 2.7em;
+    font-size: 1.5em;
+    cursor: pointer;
 }
 
 .more:hover{
@@ -61,6 +63,7 @@
     display:flex;
     flex-flow: row;
     cursor:default;
+    /* border:1px solid black; */
 }
 
 .user:hover{
@@ -68,27 +71,30 @@
 }
 
 .user-name-text{
-    color: rgb(2, 2, 2);
+    color: rgb(49, 48, 48);
     margin-left: 0.5em;
     padding:0.5vh;
     cursor: pointer;
     /* border:1px solid black; */
-    margin-bottom: 0.1em;
-    margin-top: 0.8em;
+    margin-top: 0.6em;
     max-width:8em;
-    font-size: larger;
+    font-size: small;
+    font-weight: bold;
+    margin-bottom: -0.2em;
 }
 
 .timestamp{
     margin-left: auto;
     margin-right: 0.5em;
-    margin-top: 0.8em;
+    margin-top: 1.2em;
+    font-size: xx-small;
     /* border: 1px solid black; */
     height:1em;
 }
 
 .lmessage{
     /* border:1px solid black; */
+    font-size: xx-small;
     margin-left: 0.8em;
     width:10em;
     color:rgb(78, 76, 76);
