--- a/UI/main/Messaging/messageDisplay.css
+++ b/UI/main/Messaging/messageDisplay.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     border-right: 1px solid black;
+    background-color: rgb(192, 189, 189);
 }
 
 .user-profile{
@@ -10,15 +11,25 @@
     flex-flow: row;
     /* border:1px solid black; */
     width:100%;
-    height:5em;
-    background-color: rgb(41, 134, 122);
+    height:3.2em;
+    background-color: rgb(30, 82, 194);
+    padding-top: 0.2em;
 }
 
 .profile-title-text{
-    color: rgb(223, 213, 213);
+    color: rgb(29, 28, 28);
     margin-left: 0.5em;
-    padding:0.5vh;
-    cursor: pointer;
+    margin-top: 0.55em;
+    font-size: medium;
+    /* margin-bottom: auto; */
+    cursor: pointer; 
+}
+
+.user-profile-image{
+    background-color: rgb(255, 255, 255);
+    width: 2.5em;
+    height: 2.5em;
+    margin-left: 0.2em;
 }
 
 .profile-title-text:hover{
@@ -37,7 +48,7 @@
     /* background-color: lawngreen; */
     display:flex;
     flex-direction: row;
-    margin-top: 1em;
+    margin-top: 0.5em;
     cursor: default;
 }
 
@@ -49,11 +60,10 @@
 }
 
 .message-bubble{
-    background-color: rgb(56, 153, 116);
+    background-color: rgb(131, 152, 197);
     width: fit-content;
     /* border: 1px solid black; */
     margin-left: 0.2em;
-    margin-top: 0.3em;
     border-radius: 1em;
     padding: 5px;
     /* padding: 0.2em; */
@@ -62,7 +72,7 @@
 .message-sender{
     padding:2px;
     margin-top: 0px;
-    font-size: 14px;
+    font-size: x-small;
     font-weight: bold;
     margin-bottom: 0px;
     /* border:1px solid black; */
@@ -71,7 +81,7 @@
 .message-body{
     /* border:1px solid black; */
     margin-top: 0px;
-    font-size: 16px;
+    font-size: small;
     max-width: 30em;
 }
 
@@ -82,10 +92,10 @@
 }
 
 .message-profile-image{
-    background-color: rgb(203, 214, 224);
-    width: 2.5em;
-    height: 2.5em;
-    margin: 0.5vh;
+    background-color: rgb(255, 255, 255);
+    width: 2em;
+    height: 2em;
+    margin-left: 0.1em;
     /* border:1px solid black; */
     /* border-radius: 2.5em; */
 }
@@ -107,7 +117,7 @@
     margin-top: 1vh;
     padding: 0;
     border-radius: 2em;
-    background-color: rgb(181, 185, 185);
+    background-color: rgb(239, 239, 240);
     padding-left: 0.2vh;
     padding-right: 0.2vh;
 }
