--- a/UI/main/Messaging/mess-navigation.css
+++ b/UI/main/Messaging/mess-navigation.css
@@ -30,10 +30,12 @@
 }
 
 .title-text{
-    color: rgb(29, 28, 28);
+    color: rgb(229, 228, 228);
     margin-left: 0.5em;
     margin-top: 0.4em;
     font-size: medium;
+    font-weight: bold;
+    
     /* margin-bottom: auto; */
     cursor: pointer;
     /* border: 1px solid black; */
