--- a/UI/main/Messaging/messageDisplay.css
+++ b/UI/main/Messaging/messageDisplay.css
@@ -2,14 +2,12 @@
 .chats{
     display: flex;
     flex-direction: column;
-    border-right: 1px solid black;
     background-color: rgb(192, 189, 189);
 }
 
 .user-profile{
     display:flex;
     flex-flow: row;
-    /* border:1px solid black; */
     width:100%;
     height:3.2em;
     background-color: rgb(30, 82, 194);
@@ -17,11 +15,11 @@
 }
 
 .profile-title-text{
-    color: rgb(29, 28, 28);
+    color: rgb(229, 228, 228);
     margin-left: 0.5em;
     margin-top: 0.55em;
     font-size: medium;
-    /* margin-bottom: auto; */
+    font-weight: bold;
     cursor: pointer; 
 }
 
@@ -39,13 +37,11 @@
 /* Message Structure */
 
 .message-display{
-    /* border:1px solid black; */
     overflow-y: auto;
 }
 
 
 .message-object{
-    /* background-color: lawngreen; */
     display:flex;
     flex-direction: row;
     margin-top: 0.5em;
@@ -62,11 +58,9 @@
 .message-bubble{
     background-color: rgb(131, 152, 197);
     width: fit-content;
-    /* border: 1px solid black; */
     margin-left: 0.2em;
     border-radius: 1em;
     padding: 5px;
-    /* padding: 0.2em; */
 }
 
 .message-sender{
@@ -75,11 +69,9 @@
     font-size: x-small;
     font-weight: bold;
     margin-bottom: 0px;
-    /* border:1px solid black; */
 }
 
 .message-body{
-    /* border:1px solid black; */
     margin-top: 0px;
     font-size: small;
     max-width: 30em;
@@ -104,51 +96,48 @@
 .edit-bar{
     margin-top: auto;
     display: flex;
-    background-color: rgb(110, 110, 110);
+    background-color: rgb(192, 189, 189);
 }
 
 .edit-coll{
     display: flex;
     width:100%;
-    height:fit-content;
-    /* border:1px solid black; */
-    margin-left: 1vh;
-    margin-bottom: 1.2vh;
-    margin-top: 1vh;
-    padding: 0;
-    border-radius: 2em;
-    background-color: rgb(239, 239, 240);
-    padding-left: 0.2vh;
-    padding-right: 0.2vh;
-}
-.attachment{
-    /* border:1px solid black; */
-    color: grey;
-    height: fit-content;
-    margin-top: 2vh;
-    margin-left: 0.5vh;
-    margin-right: 0.5vh;
-    border-radius: 2%;
-    cursor: pointer;
-}
-.attachment:hover{
-    background-color: rgb(108, 110, 110);
-}
-
-.edit-seg{
-    /* border:1px solid black; */
-    width:88%;
     height:8vh;
-    margin-left: 0.3vh;
-    padding-right: 2vh;
+    margin-bottom: 1.2vh;
+    padding-left: 0.2em;
+    border-radius: 2vh;
+}
+ 
+.edit-seg{
+    width:90%;
+    height:7.8vh;
     color:black;
+    margin-left: 5%;
+    margin-right: 1%;
+    border-radius: 2vh;
+    padding-left: 2%;
+    background-color: white;
 }
 
 .edit-field{
-    padding:0;
+    width: 90%;
+    border: none;
+    outline: none;
+    height: 6vh;
+    margin-top: 0.2em;
 }
 
+
+
 .send-button{
-    margin-top: 0.4vh;
-    margin-left: 0.4vh;
+    /* border: 1px solid black; */
+    /* margin-top: 0.5vh; */
+    display: flex;
+    justify-content: center;
+    margin-right: 1%;
+    margin-bottom: 100%;
+    width:7vh;
+    height: 7vh;
+    padding-left: 100%;
+    background-color: rgb(102, 158, 97);
 }
