--- a/UI/main/styles.css
+++ b/UI/main/styles.css
@@ -29,19 +29,24 @@ body{
 
 .card-piece{
     /* border: 1px solid black; */
+   
     padding-top: 0.5em;
     color:rgb(0, 174, 255);
     border-radius: 10%;
     width: 95%;
     height: 17em;
     box-shadow: 2px 2px 5px 1px #e4e2e2, -2px -2px 5px 1px #e4e2e2;
-    transition:width 0.2s ease-in-out, height 0.2s ease-in-out;
+    transform: scale(1);
+    transition:all 1s;
+    /* transition:width 0.2s ease-in-out, height 0.2s ease-in-out; */
 }
 
 .card-piece:hover{
-    width:100%;
-    height: 18em;
-    transition: all 0.2s ease-in-out;
+    /* width:100%;
+    height: 18em; */
+    transform: scale(0.9);
+    transition:transform 1s;
+    /* transition: all 0.2s ease-in-out; */
 }
 
 .c-image{
