Chat protocol ready to chat

--- a/UI/main/Messaging/messageDisplay.css
+++ b/UI/main/Messaging/messageDisplay.css
@@ -80,7 +80,7 @@
 .message-time{
     /* border:1px solid black; */
     float: right;
-    font-size: 12px;
+    font-size: xx-small;
 }
 
 .message-profile-image{
