--- a/UI/main/Messaging/mess-navigation.css
+++ b/UI/main/Messaging/mess-navigation.css
@@ -41,12 +41,38 @@
     /* border: 1px solid black; */
 }
 
+.add-user-icon{
+    width:80%;
+    height:10%;
+    position: relative;
+    top: 0%;
+    right:-20%;
+
+}
+
+.add-user{
+    /* border: 1px solid black; */
+    margin-left: auto;
+    width: 20%;
+    height:60%;
+    margin-right: 0px;
+    opacity: 0.9;
+    transform: scale(0.9);
+    padding-top: 0;
+    opacity: 0.8;
+}
+
+.add-user:active{
+    transform: scale(1);
+    transition: transform 0.1s ease-in-out;
+}
 
 
 .more{
     /* border: 1px solid black; */
     padding-top: 0.1em;
-    margin-left: auto;
+    /* margin-left: auto; */
+
 }
 
 .more::after{
@@ -79,7 +105,7 @@
     cursor: pointer;
     /* border:1px solid black; */
     margin-top: 0.6em;
-    max-width:8em;
+    max-width:12em;
     font-size: small;
     font-weight: bold;
     margin-bottom: -0.2em;
