--- a/UI/main/Messaging/signup.css
+++ b/UI/main/Messaging/signup.css
@@ -33,7 +33,8 @@ body{
     height:5vh;
     outline: none;
     border: none;
-    border-bottom: 1px solid grey;
+    background-color: rgb(228, 222, 222);
+    border-radius: 0.5em;
 }
 .field::placeholder{
     color:rgb(151, 149, 149);
@@ -41,7 +42,7 @@ body{
 
 .submit{
     margin-top: 4vh;
-    background-color: rgb(187, 187, 199);
+    background-color: rgb(150, 150, 202);
     border-radius: 1vh;
     font-family: roboto;
     font-weight: bold;
