--- a/UI/main/Messaging/signup.css
+++ b/UI/main/Messaging/signup.css
@@ -49,7 +49,12 @@ body{
     border-radius: 1vh;
     font-family: roboto;
     font-weight: bold;
+    transform: scale(0.9);
+}
 
+.submit:active{
+    transform: scale(1);
+    transition: transform 0.1s ease-in-out;
 }
 
 .text{
