The commit before the final commit... almost there

--- a/UI/main/Messaging/profileView.css
+++ b/UI/main/Messaging/profileView.css
@@ -1,6 +1,7 @@
 .chat-info{
     overflow-y: auto;
     font-size: small;
+    background-color: rgb(216, 211, 211);
 }
 
 
@@ -11,12 +12,49 @@
     margin-right: 1em;
 }
 
+.profile-view-img{
+    width: 35vh;
+    height: 35vh;
+    margin-top:2vh ;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    border: 1px solid rgb(161, 159, 159);
+    padding: 1vh;
+}
+#profile-view{
+    margin: auto;
+    width: 33vh;
+    height: 33vh;
+}
+
 .group-members{
     font-size: small;
     display: flex;
     flex-direction: column;
     max-height: fit-content;
     overflow-y: auto;
+}
+
+.info-title{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: xx-large;
+    color: rgb(71, 69, 69);
+}
+
+.group-name{
+    text-align: center;
+    font-size: large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: rgb(71, 69, 69);
+}
+
+.group-description{
+    text-align: center;
+    font-size: large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: rgb(71, 69, 69);
 }
 
 .group-member-object{
