--- a/UI/main/Messaging/messageDisplay.css
+++ b/UI/main/Messaging/messageDisplay.css
@@ -32,8 +32,8 @@
 
 .user-profile-image{
     background-color: rgb(255, 255, 255);
-    width: 2.5em;
-    height: 2.5em;
+    width: 4vh;
+    height: 4vh;
     margin-left: 0.2em;
 }
 
@@ -45,7 +45,9 @@
 
 .message-display{
     overflow-y: auto;
+    margin-bottom: 0vh;
     /* border: 1px solid black; */
+    /* max-height: 150vh; */
 }
 
 
@@ -93,8 +95,8 @@
 
 .message-profile-image{
     background-color: rgb(255, 255, 255);
-    width: 2em;
-    height: 2em;
+    width: 3vh;
+    height: 3vh;
     margin-left: 0.1em;
 }
 
@@ -103,25 +105,28 @@
     position: fixed;
     bottom:1%;
     width: 48%;
+    /* border: 1px solid black; */
+    /* height: fit-content; */
     display: flex;
     background-color: rgb(192, 189, 189);
-     /* border: 1px solid black; */
-    
+    margin-bottom: 3vh;
     /* margin-left: 1%; */
 }
 
 .edit-coll{
     display: flex;
     width:100%;
-    height:8vh;
+    height:6vh;
+    /* height: fit-content; */
     /* margin-bottom: 1vh; */
     padding-left: 0.2em;
     border-radius: 2vh;
+    /* border: 1px solid black; */
 }
  
 .edit-seg{
     width:90%;
-    height:7.8vh;
+    height:6vh;
     color:black;
     margin-left: 5%;
     margin-right: 1%;
@@ -135,8 +140,8 @@
     width: 90%;
     border: none;
     outline: none;
-    height: 6vh;
-    margin-top: 0.2em;
+    height: 5.5vh;
+    margin-top: 0vh;
 }
 
 
@@ -148,8 +153,8 @@
     justify-content: center;
     margin-right: 1%;
     margin-bottom: 100%;
-    width:7vh;
-    height: 7vh;
+    width:5.5vh;
+    height: 5.5vh;
     padding-left: 100%;
     background-color: rgb(102, 158, 97);
 }
