--- a/UI/main/Messaging/signup.css
+++ b/UI/main/Messaging/signup.css
@@ -71,3 +71,88 @@ body{
     background-color:rgb(241, 239, 239) ;
     box-shadow: 0px 0px 50px 40px rgb(241, 239, 239), 0px 0px 40px 30px rgb(241, 239, 239);
 }
+
+.overlay{
+    border: 1px solid black;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    left: 0;
+    opacity: 0.9;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    height: 100vh;
+    overflow-y: hidden;
+    z-index: 100;
+    display: none;
+}
+
+
+
+.avatar-overlay{
+    /* border: 1px solid black; */
+    margin-top: 10vh;
+    /* display: none; */
+    background-color: white;
+    width: 60%;
+    max-height: 70vh;
+    border-radius:1vh;
+}
+
+.img-container{
+    /* border: 1px solid black; */
+    width: 100%;
+    max-height: 50vh;
+    max-height: 65;
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    margin-bottom: 5vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.img-item{
+    background-color: rgb(230, 224, 224);
+    border: 1px solid rgb(153, 153, 153);
+    width: 15vh;
+    height: 15vh;
+    margin: 1vh;
+    padding: 1vh;
+    border-radius: 1vh;
+    box-shadow: 0px 0px 10px 0px rgb(214, 213, 213), 0px 0px 10px 0px rgb(226, 221, 221);
+    overflow: hidden;
+}
+
+.img-item:hover{
+    opacity: 1;
+    border: 2px solid blue;
+
+}
+
+.img-item:active{
+    border: 2px solid blue;
+}
+
+.avatar{
+    width: 13vh;
+    height: 13vh;
+    /* border: 1px solid black; */
+}
+
+.next-b{
+    /* border: 1px solid black; */
+    margin-top: 0px;
+    position: relative;
+    top: -3vh;
+    width: fit-content;
+    padding: 1vh;
+    float: right;
+    margin-right:2vh;
+    background-color: rgb(167, 165, 165);
+    border-radius: 1vh;
+    color: rgb(20, 20, 20);
+}
