--- a/UI/main/Messaging/messageDisplay.css
+++ b/UI/main/Messaging/messageDisplay.css
@@ -32,8 +32,8 @@
 
 .user-profile-image{
     background-color: rgb(255, 255, 255);
-    width: 4vh;
-    height: 4vh;
+    width: 4.5vh;
+    height: 4.5vh;
     margin-left: 0.2em;
 }
 
@@ -90,7 +90,7 @@
 .message-time{
     /* border:1px solid black; */
     float: right;
-    font-size: xx-small;
+    font-size:0.6em;
 }
 
 .message-profile-image{
