--- a/UI/main/Messaging/mess-navigation.css
+++ b/UI/main/Messaging/mess-navigation.css
@@ -1,9 +1,10 @@
+
 .navigation{
     padding: 0px;
     display: flex;
     flex-flow: column;
     justify-content: flex-start;
-    /* border-right: 1px solid rgb(68, 63, 63); */
+    border-right: 1px solid rgb(68, 63, 63);
     background-color: rgb(224, 222, 222);
 }
 
@@ -92,6 +93,7 @@
     flex-flow: row;
     cursor:default;
     /* border:1px solid black; */
+    width: 100%;
 }
 
 .user:hover{
@@ -131,4 +133,29 @@
 .contact-list{
     overflow-y: auto;
     height: inherit;
+    display: none;
+}
+
+
+
+.tabs{
+    display: flex;
+    flex-flow: row;
+    margin-bottom: 1vh;
+    z-index: 1;
+}
+
+.tab{
+    width: 50%;
+    cursor: pointer;
+}
+
+.tab:hover{
+    background-color: rgb(228, 220, 220);
+}
+
+
+
+.chats-tab{
+    border-right:1px solid rgb(179, 176, 176);
 }
