--- a/UI/main/Messaging/search.css
+++ b/UI/main/Messaging/search.css
@@ -8,6 +8,7 @@
     background-color: black;
     opacity: 0.9;
     transition: all 0.5s ease-in-out;
+    z-index: 100;
 }
 
 .close-overlay{
@@ -154,7 +155,7 @@
     background-color: blue;
     color: white;
     border-radius: 0.7em;
-    width: 10%;
+    width: 20%;
     margin-left: 1%;
     border: none;
     outline: none;
