--- a/UI/main/styles.css
+++ b/UI/main/styles.css
@@ -1,35 +1,33 @@
+
 body{
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(226, 218, 218);
     color:rgb(0, 0, 0);
 }
 
 .head{
-    /* border: 1px solid black; */
     text-align: center;
 }
 
 
-.row{
-    /* border: 1px solid black; */
+.show-cards{
     display: flex;
     flex-flow: row;
+    flex-wrap: wrap;
     justify-content: center;
     width: 100%;
     margin-top: 4em;
+    margin-bottom: 5vh;
 }
 
 .card-container{
-    background-color: rgb(255, 255, 255);
-    /* border: 1px solid black; */
+    background-color: rgb(221, 214, 214);
     height: 18em;
     margin-left: auto;
     margin-right: auto;
     width: 30%;
 }
 
-.card-piece{
-    /* border: 1px solid black; */
-   
+.card-piece{   
     padding-top: 0.5em;
     color:rgb(0, 174, 255);
     border-radius: 10%;
@@ -38,19 +36,15 @@ body{
     box-shadow: 2px 2px 5px 1px #e4e2e2, -2px -2px 5px 1px #e4e2e2;
     transform: scale(1);
     transition:all 1s;
-    /* transition:width 0.2s ease-in-out, height 0.2s ease-in-out; */
 }
 
 .card-piece:hover{
-    /* width:100%;
-    height: 18em; */
     transform: scale(0.9);
     transition:transform 1s;
-    /* transition: all 0.2s ease-in-out; */
+    border-left: 2px solid blue;
 }
 
 .c-image{
-    /* border:1px solid black; */
     width: 90%;
     height: 10em;
     margin: 5px auto 5px auto;
@@ -63,7 +57,6 @@ body{
 }
 
 .c-text{
-    /* border: 1px solid black; */
     width: 90%;
     height:4em;
     margin: 5px auto 5px auto;
@@ -78,4 +71,10 @@ body{
     width: 100%;
     height: 4em;
     background-color: #00aeff;
+}
+
+@media screen and (max-width:768px) {
+    .card-container{
+        width: 100%;
+    }
 }
