--- a/UI/main/Messaging/messageDisplay.css
+++ b/UI/main/Messaging/messageDisplay.css
@@ -107,7 +107,9 @@
     bottom:1%;
     width: 48%;
     /* border: 1px solid black; */
+    height: 30px;
     /* height: fit-content; */
+    min-height: 2.8em;
     display: flex;
     background-color: rgb(192, 189, 189);
     margin-bottom: 3vh;
@@ -117,7 +119,7 @@
 .edit-coll{
     display: flex;
     width:100%;
-    height:6vh;
+    height:inherit;
     /* height: fit-content; */
     /* margin-bottom: 1vh; */
     padding-left: 0.2em;
@@ -127,7 +129,7 @@
  
 .edit-seg{
     width:90%;
-    height:6vh;
+    height:inherit;
     color:black;
     margin-left: 5%;
     margin-right: 1%;
@@ -141,7 +143,7 @@
     width: 90%;
     border: none;
     outline: none;
-    height: 5.5vh;
+    height: inherit;
     margin-top: 0vh;
 }
 
@@ -154,8 +156,8 @@
     justify-content: center;
     margin-right: 1%;
     margin-bottom: 100%;
-    width:5.5vh;
-    height: 5.5vh;
+    width:30px;
+    height: inherit;
     padding-left: 100%;
     background-color: rgb(102, 158, 97);
 }
